# feature-bacon

./: .gitignore  Makefile  README.MD  buf.gen.yaml  sonar-project.properties
.github/workflows/: ci-sdks.yaml  ci.yaml  release.yaml
backend/: .gitignore  .golangci.yml  cover.out  go.mod  go.sum  sonar-project.properties
backend/testdata/: flags.yaml
certs/: README.md  generate.sh
deploy/docker/: Dockerfile.core  Dockerfile.frontend  Dockerfile.module-gcppubsub  Dockerfile.module-grpcpub  Dockerfile.module-kafka  Dockerfile.module-mongodb  Dockerfile.module-postgres  Dockerfile.module-redis  Dockerfile.module-sqs  docker-compose.yaml
deploy/prometheus/: prometheus.yml
docs/: SPEC.md
frontend/: package-lock.json  package.json  sonar-project.properties
local-development/: .env  docker-compose.yaml
openspec/: config.yaml
samples/: sonar-project.properties
samples/01-sidecar-quickstart/: README.md  docker-compose.yaml  test.sh
samples/02-saas-multi-tenant/: README.md  docker-compose.yaml  seed.sh  test.sh
samples/03-redis-sidecar/: README.md  docker-compose.yaml  flags.yaml  test.sh
samples/04-config-as-code/: README.md  docker-compose.yaml  test.sh
samples/05-sdk-go/: .gitignore  Dockerfile  README.md  docker-compose.yaml  go.mod  main.go  main_test.go  test.sh
samples/06-sdk-javascript/: Dockerfile  README.md  app.js  app.test.js  docker-compose.yaml  (+3 more)
sdks/python/: .gitignore  README.md  pyproject.toml  sonar-project.properties
sdks/python/src/feature_bacon/: __init__.py  client.py  errors.py  types.py
sdks/python/tests/: test_client.py
(+224 files in other folders)
