[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-bacon"
version = "0.1.0"
description = "Official Python SDK for Feature Bacon"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.urls]
Homepage = "https://github.com/orlandoburli/feature-bacon"
Repository = "https://github.com/orlandoburli/feature-bacon/tree/main/sdks/python"
Issues = "https://github.com/orlandoburli/feature-bacon/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
